<?xml version="1.0"?>
<?xml-model
  href="http://download.ros.org/schema/package_format3.xsd"
  schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mav_disturbance_observer</name>
  <version>1.0.0</version>
  <description>mav disturbance observers libraries</description>

  <maintainer email="mina.kamel@mavt.ethz.ch">Mina Kamel</maintainer>

  <author>Mina Kamel</author>
  <author>Fadri Furrer</author>
  <author>Michael Burri</author>
  <author>Janosch Nikolic</author>
  <author>Markus Achtelik</author>

  <license>ASL 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>dynamic_reconfigure</depend>
  <depend>mav_msgs</depend>
  <depend>cmake_modules</depend>
  <depend>message_generation</depend>
  <depend>tf2_ros</depend>
  <depend>rclcpp</depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <export>
    <build_type>ament_cmake</build_type>
  </export>
  <member_of_group>rosidl_interface_packages</member_of_group>
</package>
